--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,38 @@
   "dir": "ltr",
   "categories": ["education", "productivity", "utilities"],
   "prefer_related_applications": false,
+   CONFIGURATION PUSH
+  "push": {
+    "applicationServerKey": "BFc44CIL4VykUiY8_17s_HbUm5pRqhNhlFcy35H0XKuyFIq-2472MTfMZBfKMxW81DCHTkRB4xy_WaH-f3Ik2TM"
+  },
   
+  // MODIFIER icons
+  "icons": [
+    {
+      "src": "/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable badge"
+    },
+    {
+      "src": "/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable badge"
+    }
+  ],
+  
+  // AJOUTER screenshots pour les stores
+  "screenshots": [
+    {
+      "src": "/screenshots/notifications.png",
+      "sizes": "1080x1920",
+      "type": "image/png",
+      "label": "Notifications système"
+    }
+  ]
+}
+
   "icons": [
     {
       "src": "/icon-72x72.png",
