Modify changelog for version 2.3.1
Updated changelog to reflect new AI assistance feature.

--- a/version-manifest.json
+++ b/version-manifest.json
@@ -2,7 +2,7 @@
   "currentVersion": "2.3.1",
   "previousVersion": "2.1.0",
   "releaseDate": "2024-01-15",
-  "changelog": "• Notifications Firebase en arrière-plan\n• Badges d'icône d'application\n• Synchronisation périodique\n• Cache optimisé",
+  "changelog": "• ajout ´une assistance IA",
   "mandatory": false,
   "updateUrl": "./",
   "features": [
